# cryptography

./: Cargo.toml
.github/workflows/: ci.yml  publish-rust.yml
curve25519-cuda/: Cargo.toml  build.rs
curve25519-cuda/benches/: msm.rs
curve25519-cuda/src/: lib.rs  tests.rs
curve25519/solana-ed25519/: Cargo.toml  README.md
curve25519/src/: edwards.rs  field.rs
ed25519-heea/: CHANGELOG.md  Cargo.toml  README.md
ed25519-heea/benches/: bench.rs
ed25519-heea/src/: batch.rs  signing_key.rs  verification_key.rs
ed25519-heea/tests/: batch.rs  decoding.rs  encoding.rs  heea.rs  rfc8032.rs  small_order.rs  unit_tests.rs
ed25519-heea/tests/util/: mod.rs
experimental/ed25519-pokos/: Cargo.toml  readme.md
experimental/ed25519-pokos/examples/: gen_verify_pokos.rs
experimental/ed25519-pokos/src/: lib.rs  private_seed_chain.rs  prover.rs  verifier.rs
experimental/ed25519-pokos/src/sha512/: air.rs  circuit.rs  constants.rs  mod.rs  ops.rs  private_seed_chain.rs  trace.rs
experimental/ed25519-pokos/src/sha512/air/: columns.rs  constraints.rs  seed_chain.rs  trace_builder.rs
experimental/ed25519-pokos/src/sha512/proof_api/: mod.rs  segment_chain.rs
scripts/: publish-rust.sh
syscall/bls12-381-syscall/benches/: bench_main.rs
syscall/bls12-381-syscall/src/: addition.rs  decompression.rs  subtraction.rs
syscall/bn254-syscall/: Cargo.toml
syscall/bn254-syscall/src/: addition.rs  lib.rs  multiplication.rs  pairing.rs
