[workspace]
members = [
    "curve25519/curve25519-cuda",
    "curve25519/solana-ed25519", 
    "experimental/ed25519-pokos",
]
resolver = "2"

[workspace.dependencies]
bincode = "1"
cc = "1.0"
cfg-if = "1"
criterion = { version = "0.5", features = ["html_reports"] }
curve25519 = { path = "curve25519/solana-ed25519", package = "solana-ed25519" }
curve25519-dalek-derive = "0.1.1"
cpufeatures = "0.2.17"
der = "0.7.9"
digest = { version = "0.11.0-rc.4", default-features = false, features = ["block-api"] }
ed25519 = { version = "2.2.3", default-features = false }
ed25519-dalek = "2.2.0"
ed25519-zebra = "4.2.0"
ff = { version = "=0.14.0-pre.0", package = "rustcrypto-ff", default-features = false }
group = { version = "=0.14.0-pre.0", package = "rustcrypto-group", default-features = false }
hashbrown = "0.15"
hex = "0.4.2"
pkcs8 = { version = "0.10.1", features = ["pem"] }
proptest = "1"
rand = "0.10.0-rc.5"
rand_core = { version = "0.10.0-rc-3", default-features = false }
rayon = "1.10"
rustc_version = "0.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.11.0-rc.3", default-features = false }
subtle = { version = "2.6.0", default-features = false, features = ["const-generics"] }
which = "4.4"
zeroize = { version = "1", default-features = false, features = ["derive"] }

[profile.dev]
opt-level = 2
