[package]
name = "solana-curve25519-cuda"
version = "0.1.0"
edition = "2024"
authors = ["Anza Cryptography Team"]

[dependencies]
# Keep the dependency key as "curve25519" so that all existing `use curve25519::…`
# references in source files remain valid; the actual package is curve25519-sol.
curve25519 = { path = "../curve25519", package = "solana-curve25519" }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
rayon = "1.10"

[build-dependencies]
cc = "1.0"
which = "4.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "msm"
harness = false
