[package]
name = "ed25519-heea"
version = "0.1.0"
rust-version = "1.85.0"
authors = [
    "Henry de Valence <hdevalence@hdevalence.ca>",
    "Zcash Foundation <zebra@zfnd.org>",
    "Anza Cryptography Team",
]
license = "MIT OR Apache-2.0"
edition = "2024"
description = "ZIP-215-compliant Ed25519 with HEEA-accelerated verification (forked from ed25519-zebra)"
resolver = "2"
include = [
    "/src",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/tests",
    "/benches",
]

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
# Keep the dependency key as "curve25519" so that all existing `use curve25519::…`
# references in source files remain valid; the actual package is curve25519-sol.
curve25519 = { path = "../curve25519", package = "solana-curve25519", default-features = false, features = ["digest", "zeroize", "precomputed-tables"] }
der = { version = "0.7.9", optional = true }
ed25519 = { version = "2.2.3", default-features = false }
hashbrown = { version = "0.16", optional = true }
pkcs8 = { version = "0.10.1", optional = true, features = ["pem"] }
rand_core = "0.6"
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
sha2 = { version = "0.11.0-rc.3", default-features = false }
subtle = { version = "2.6.1", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = "0.8"
bincode = "1"
criterion = "0.7"
ed25519-zebra-legacy = { package = "ed25519-zebra", version = "1" }
color-eyre = "0.6"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
once_cell = "1.21"

[features]
nightly = []
default = ["serde", "std"]
alloc = [
    "curve25519/alloc",
    "ed25519/alloc",
    "hashbrown",
    "pkcs8?/alloc",
    "zeroize/alloc",
]
pem = ["pkcs8", "dep:der", "ed25519/pem"]
pkcs8 = ["dep:pkcs8", "ed25519/pkcs8", "alloc"]
serde = ["dep:serde", "ed25519/serde"]
std = ["alloc", "ed25519/std", "subtle/std"]

[[test]]
name = "rfc8032"

[[test]]
name = "unit_tests"

[[test]]
name = "batch"

[[test]]
name = "heea"

[[bench]]
name = "bench"
harness = false
