[package]
name = "solana-bn254"
description = "Solana BN254"
documentation = "https://docs.rs/solana-bn254-syscall"
version = "0.1.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/cryptography"
homepage = "https://anza.xyz"
license = "Apache-2.0"
edition = "2024"
include = ["src/**/*"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
